# jupyter-guide-to-linear-algebra

./: CLAUDE.md  main.py  pyproject.toml
exercises/: application_of_liniar_transformations_discrete_systems_exercises.py  application_of_liniar_transformations_graphics_exercises.py  applicaton_of_vector_spaces_exercises.py  bases_excercises.py  cryptography.py  exercise1.py  exercise2.py  general_linear_systems_examples.py  graph_theory_cliques.py  graph_theory_exercices.py  graph_theory_tournament.py  inner_products_exercises.py  interpolation.py  interpolation_exercise_1.py  interpolation_exercise_2.py  inverse_matrices.py  laguide.py  linear_combinations.py  linear_combinations_examples.py  linear_imdependence.py  linear_imdependence_2nd_time_solved.py  linear_transformations_examples.py  linear_transformations_exercices.py  lu_factorization.py  matrix_representation_examples.py  matrix_representation_exercises.py  orthogonal_subspaces_examples.py  orthogonal_subspaces_exercises.py  orthogonalization_examples.py  orthogonalization_exercises.py  plt_helper.py  qr_factorization_exercises.py  solve_system.py  transformations_in_a_plane_examples.py  transformations_in_a_plane_exercises.py  vector_spaces.py  vector_spaces_examples.py  vector_spaces_exercises.py
src/guide_to_linear_algebra/: __init__.py  general_linear_systems_functions.py  inner_products.py  solve_system.py  web_navigation.py
tests/: test_calculator.py  test_exercise1.py  test_exercise2.py  test_general_linear_systems_functions.py  test_inner_products.py  test_solve_system.py  test_web_navigation.py
