[project]
name = "guide-to-linear-algebra"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jorg Jenni", email = "jorg.jenni@jennius.co.uk" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
guide-to-linear-algebra = "guide_to_linear_algebra:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
