[project]
name = "guide-to-linear-algebra"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jorg Jenni", email = "jorg.jenni@jennius.co.uk" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
guide-to-linear-algebra = "guide_to_linear_algebra:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
    "numpy>=2.3.5",
    "pytest>=9.0.2",
    "scipy>=1.16.3",
]
